--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,6 @@
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.8.5</version>
 				<executions>
-					<!-- prepare the agent -->
 					<execution>
 						<id>prepare-agent</id>
 						<phase>process-test-classes</phase>
@@ -49,9 +48,6 @@
 							<goal>prepare-agent</goal>
 						</goals>
 					</execution>
-
-					<!-- If you have integration tests run with the `failsafe-maven-plugin` 
-						use `prepare-agent-integration` -->
 					<execution>
 						<id>prepare-agent-integration</id>
 						<phase>pre-integration-test</phase>
@@ -59,13 +55,25 @@
 							<goal>prepare-agent-integration</goal>
 						</goals>
 					</execution>
-
-					<!-- generate an HTML report -->
 					<execution>
 						<id>report</id>
 						<phase>verify</phase>
 						<goals>
 							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-pmd-plugin</artifactId>
+				<version>3.12.0</version>
+				<executions>
+					<execution>
+						<id>pmd-scan</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>check</goal>
 						</goals>
 					</execution>
 				</executions>
